# bp-som

./: .gitignore  .travis.yml  AUTHORS  BPSOM_SST2_Experiment-Colab.ipynb  BPSOM_SST2_Experiment.ipynb  Makefile  Makefile.am  NEWS  README.md  README_python.md  TEST_RESULTS.md  bp.h  bpsom.c  configure.ac  example.prm  grapho.hlp  proben1.hlp  requirements.txt  som.h
.github/workflows/: bp-som.yml
examples/: Makefile.am  example-grapho.prm  example0.prm  example1.prm  exp-grapho-bpsom-a.tst  exp-grapho-bpsom-a.val  exp-grapho-bpsom-a10.bst
include/: Makefile.am
include/bpsom/: Makefile.am  bp.h  grapho.hlp
m4/: Makefile.am
python/experiments/: run_glue.py
python/experiments/configs/: baseline.yaml  bpsom.yaml  bpsom_test.yaml
python/models/: bpsom_bert.py  som_layer.py
python/training/: pruning.py  trainer.py
python/visualization/: logger.py  som_viz.py
src/: Makefile.am  bpsom.c  bpsom.cc
